<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibrah.hout.letschat.SingInActivity"
    android:id="@+id/sign_in_layout"
    >
    

    <include layout="@layout/app_bar_layout" android:id="@+id/singin_toolbar"></include>



    <TextView
        android:id="@+id/sign_in_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/singin_toolbar"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_to_your_account"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email"
        android:layout_below="@id/sign_in_tv"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"

        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_e_mail"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_below="@id/login_email"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/singin_button"
        android:text="@string/log_in"
        android:layout_below="@id/login_password"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:backgroundTint="@color/colorPrimary"
        android:paddingBottom="16dp"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:textColor="@color/white"
        />

</RelativeLayout>
