<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <include layout="@layout/app_bar_layout" android:id="@+id/profile_settings_toolbar"/>


    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_settings_toolbar"
        android:layout_marginTop="32dp"
        android:src="@drawable/defaultpic"
        android:scaleType="centerCrop"
        android:layout_width="180dp"
        android:layout_height="180dp" />


    <ImageButton
        android:id="@+id/edit_display_imgbtn"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:layout_above="@+id/linearlayout0"
        android:layout_alignEnd="@+id/profile_img"
        android:background="@null"
        android:src="@drawable/pick_img_selector" />


    <LinearLayout
        android:id="@+id/linearlayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_img"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/display_name_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:text="@string/display_name">

        </TextView>
        <ImageButton
            android:id="@+id/edit_display_name_imgbtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="top"
            android:background="@null"
            android:src="@drawable/edit_selector"
            android:contentDescription="@string/edit" />

    </LinearLayout>


    <View
        android:id="@+id/img_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/linearlayout0"
        android:layout_marginTop="8dp"
        android:background="#eee"
        ></View>

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Information"
        android:textColor="#d7d7d7"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_below="@id/img_divider"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_alignParentStart="true"
        />



    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:paddingTop="16dp"
        android:orientation="horizontal"

        >
        <TextView
            android:id="@+id/status_tv_settings"
            android:paddingEnd="8dp"
            android:paddingStart="32dp"
            android:text="@string/temp_status"
            android:textColor="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            />
        <ImageButton
            android:id="@+id/edit_status_imgbtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="top"
            android:background="@null"
            android:src="@drawable/edit_selector"
            />


    </LinearLayout>

    <View
        android:id="@+id/img_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/linearlayout1"
        android:layout_marginTop="16dp"
        android:background="#eee"
        ></View>

    <!--<Button-->
        <!--android:id="@+id/change_img_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignEnd="@+id/change_status_btn"-->
        <!--android:layout_alignStart="@+id/change_status_btn"-->
        <!--android:layout_marginTop="55dp"-->
        <!--android:backgroundTint="@color/colorAccent"-->
        <!--android:text="@string/change_image"-->
        <!--android:textColor="@color/white"-->
        <!--android:visibility="gone"/>-->

    <!--<Button-->
        <!--android:id="@+id/change_status_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:backgroundTint="@color/colorAccent"-->
        <!--android:text="@string/change_status"-->
        <!--android:textColor="@color/white"-->
        <!--android:visibility="gone" />-->



</RelativeLayout>
